--- a/.github/workflows/push-master-deploy.yml
+++ b/.github/workflows/push-master-deploy.yml
@@ -49,7 +49,8 @@ jobs:
 
             # Authenticate to org
             - name: 'Authenticate to Production Org'
-              run: sfdx auth:sfdxurl:store -f ./SFDX_PRODUCTION_URL.txt -s -a production
+             # run: sfdx auth:sfdxurl:store -f ./SFDX_PRODUCTION_URL.txt -s -a production
+              run: sfdx force:auth:web:login -a OrgAlias -r https://test.salesforce.com
 
             - name: 'Deploy the entire branch to Production org'
               run: sfdx force:source:deploy -p src --testlevel RunLocalTests --json
