--- a/.github/workflows/push-master-deploy.yml
+++ b/.github/workflows/push-master-deploy.yml
@@ -52,8 +52,8 @@ jobs:
              # run: sfdx auth:sfdxurl:store -f ./SFDX_PRODUCTION_URL.txt -s -a production
               run: sfdx force:auth:web:login -a OrgAlias -r https://test.salesforce.com
 
-            - name: 'Deploy the entire branch to Production org'
-              run: sfdx force:source:deploy -p src --testlevel RunLocalTests --json
+            #- name: 'Deploy the entire branch to Production org'
+            #  run: sfdx force:source:deploy -p src --testlevel RunLocalTests --json
 
-            - name: 'Deploy destructive changes (if any) to Production org'
-              run: sfdx force:mdapi:deploy -d "changed-sources/destructiveChanges" --checkonly --ignorewarnings 
+            #- name: 'Deploy destructive changes (if any) to Production org'
+             # run: sfdx force:mdapi:deploy -d "changed-sources/destructiveChanges" --checkonly --ignorewarnings 
